==================

===================
Version 7.x-3.x-dev
===================


Starting new branch with a total rework of Calendar, using a Views pager plugin for the back/next navigation, 
a row plugin to explode the view results into calendar day items, and a style plugin to disply the results in a calendar.

======================
Version 7.x-3.0-alpha2
======================

- Issue #1087798 by anj, Fix X-WR-CALNAME in VCALENDAR.
- Add new 'is_field' flag to tell when we're working with a Field field.
- Issue #1232258 Fix the option to group items by a field value in the day view.
- The Link back to the calendar on the date node got lost in the latest rework. Add it back.
- The Add+ link got lost when we switched to using a row plugin. Add it back.
- Fix typo in ical path, it should be .ics, not .cal.
- Fix master calendar display, it was missing the contextual filter.

======================
Version 7.x-3.0-alpha1
======================

Initial release of 7.3 branch.

- Get colorpicker working again with an assist from the Examples module Field example.
- Issue #1227128 The ical feed needs to have a '.ics' extension on it.
- The ical icon was not attaching to block views.
- The row plugin needs to clone the node before altering it, or other views on the same page that use the same node will acquire things like the 'date_id' that the row plugin is setting.
- Issue #1222770 Lighten the color of the date in month 'overflow' days so it is clearer that they are out of scope for the view.
- Issue #1223500 Fix the day link in the year view to point to the day view rather than the year view.
- Add the date sort field to the default view so upcoming events sort correctly.
- Change the default setting for the day view and make sure that the style does not try to create overlap items if it is missing the groupby value (which the default view was doing.)
- Issue #1168672 Temporary workaround for missing date info in calendar style. Still need a smarter fix.