@@ -13,6 +13,7 @@ a row plugin to explode the view results into calendar day items, and a style pl
 Version 7.x-3.0-alpha2
 ======================
 
+- Add option to change method from PUBLISH to REQUEST in VCALENDAR.
 - Issue #1087798 by anj, Fix X-WR-CALNAME in VCALENDAR.
 - Add new 'is_field' flag to tell when we're working with a Field field.
 - Issue #1232258 Fix the option to group items by a field value in the day view.
